--- a/Secure Code-Webpage/index.html
+++ b/Secure Code-Webpage/index.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>secure-code-whisperer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Secure Code Webpage</title>
+    <meta name="description" content="Secure Code Webpage - AI-powered code security and enhancement." />
+    <meta name="author" content="Secure Code Team" />
 
-    <meta property="og:title" content="secure-code-whisperer" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Secure Code Webpage" />
+    <meta property="og:description" content="AI-powered code security and enhancement." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.jpg" />
 
+    <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@secure_code" />
+    <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
   </head>
 
   <body>
