--- a/Secure Code-Webpage/index.html
+++ b/Secure Code-Webpage/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="/logo.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
 
   <body>
