--- a/Secure Code-Webpage/index.html
+++ b/Secure Code-Webpage/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Secure Code Webpage</title>
-    <meta name="description" content="Secure Code Webpage - AI-powered code security and enhancement." />
+    <title>FortiScan</title>
+    <meta name="description" content="FortiScan - AI-powered code security and enhancement." />
     <meta name="author" content="Secure Code Team" />
 
     <!-- Open Graph Meta -->
-    <meta property="og:title" content="Secure Code Webpage" />
+    <meta property="og:title" content="FortiScan" />
     <meta property="og:description" content="AI-powered code security and enhancement." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:image" content="/logo.png" />
 
     <!-- Twitter Meta -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@secure_code" />
-    <meta name="twitter:image" content="/logo.jpg" />
+    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
   </head>
 
   <body>
